--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -1,24 +1,26 @@
 @{
     ViewData["Title"] = "Announcements and Notifications";
 }
+
 <body class="announcement-background">
-<div class="section-gap"></div>
-<div class="announcement-background">
-    <div class="ui container">
-        <h2 class="title-styling">@ViewData["Title"]</h2>
+<h1 class="title-styling">@ViewData["Title"]</h1>
+    <div class="ui container center aligned">
+        <div class="announcement-container">
 
-        <div class="section-gap"></div>
+            <div class="section-gap"></div>
 
-        <a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create a New Announcement</a>
+            <a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create a New Announcement</a>
 
-        <div class="section-gap"></div>
+            <div class="section-gap"></div>
 
-        <section>
-            @await Html.PartialAsync("~/Views/Announcements/_AnnouncementsPartial.cshtml")
-        </section>
+            <section>
+                @await Html.PartialAsync("~/Views/Announcements/_AnnouncementsPartial.cshtml")
+            </section>
+        </div>
     </div>
-</div>
 </body>
+
 @section Scripts {
     <script src="~/js/announcementForm.js"></script> 
 }
+
