--- a/main/BitBracket/src/BitBracket/Views/Home/Privacy.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Privacy.cshtml
@@ -2,8 +2,9 @@
     ViewData["Title"] = "About";
 }
 
-<body class="announcement-background"></body>
-<div class="ui container announcement-background" style="padding-top: 20px;">
+<div class="section-gap"></div>
+<div class="section-gap"></div>
+<body class="announcement-background">
     <h1 class="ui center aligned header title-styling">About BitBracket</h1>
     <p class="text-styling">
         BitBracket is a comprehensive platform designed to enhance your tournament experience. Offering a wide range of features from live updates to in-depth analysis, BitBracket ensures fans, players, and organizers have everything they need at their fingertips.
@@ -11,14 +12,18 @@
 
     <div class="ui section divider"></div>
 
-    <h2 class="ui center aligned header title-styling">Our Policy</h2>
+    <h2 class="ui center aligned header title-styling">
+        <i class="shield alternate icon"></i>Our Policy
+    </h2>
         <p class="text-styling">
             At BitBracket, we are committed to ensuring the privacy and security of our users. Our policy outlines the types of information we collect, how it is used, and the measures we take to protect your data. We are dedicated to transparency and empowering our users with clear choices about their information.
         </p>
 
     <div class="ui section divider"></div>
 
-    <h2 class="ui center aligned header title-styling">Meet The Team</h2>
+    <h2 class="ui center aligned header title-styling">
+        <i class="users icon"></i>Meet The Team
+    </h2>
     <div class="ui three stackable cards">
         <div class="card">
             <div class="ui vertical animated button" style="width: 100%;">
@@ -43,4 +48,4 @@
     <p class="text-styling">
         For any inquiries, please reach out to us at <a href="mailto:BitBracketApp@gmail.com" class="ui teal">BitBracketApp@gmail.com</a>.
     </p>
-</div>
+</body>
