Modifying front-end stuff

--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,25 +1,29 @@
 ﻿@page
 @model ForgotPasswordModel
+
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Forgot Your Password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
+<body class="announcement-background">
+    <div class="ui container center aligned" style="padding-top: 50px; padding-bottom: 50px;">
+        <h1 class="ui header title-styling">@ViewData["Title"]</h1>
+        <h2 class="ui header">Enter your email to reset your password</h2>
+        <div class="ui very padded segment">
+            <form method="post" class="ui large form">
+                <div class="ui segment">
+                    <div asp-validation-summary="ModelOnly" class="ui message negative" role="alert"></div>
+                    <div class="field">
+                        <label>Email</label>
+                        <input asp-for="Input.Email" placeholder="name@example.com" />
+                        <span asp-validation-for="Input.Email" class="ui pointing red basic label"></span>
+                    </div>
+                    <button type="submit" class="ui fluid large teal submit button">Reset Password</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
+</body>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
