--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,38 +1,39 @@
 ﻿@page
 @model LoginWith2faModel
+
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "Two-Factor Authentication";
 }
 
-<h1>@ViewData["Title"]</h1>
-<hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
-            <input asp-for="RememberMe" type="hidden" />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.TwoFactorCode" class="form-control" autocomplete="off" />
-                <label asp-for="Input.TwoFactorCode" class="form-label"></label>
-                <span asp-validation-for="Input.TwoFactorCode" class="text-danger"></span>
+<body class="announcement-background">
+    <div class="ui container center aligned" style="padding-top: 50px; padding-bottom: 50px;">
+        <h1 class="ui header title-styling">@ViewData["Title"]</h1>
+        <p class="text-styling">Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+        <div class="ui very padded segment">
+            <form method="post" class="ui large form" asp-route-returnUrl="@Model.ReturnUrl">
+                <input asp-for="RememberMe" type="hidden" />
+                <div class="ui segment">
+                    <div asp-validation-summary="ModelOnly" class="ui message negative" role="alert"></div>
+                    <div class="field">
+                        <label>Authenticator Code</label>
+                        <input asp-for="Input.TwoFactorCode" placeholder="Enter code" autocomplete="off" />
+                        <span asp-validation-for="Input.TwoFactorCode" class="ui pointing red basic label"></span>
+                    </div>
+                    <div class="ui checkbox">
+                        <input asp-for="Input.RememberMachine" tabindex="0" class="hidden" />
+                        <label>@Html.DisplayNameFor(m => m.Input.RememberMachine)</label>
+                    </div>
+                    <div class="ui fluid large teal submit button">Log in</div>
+                </div>
+            </form>
+            <div class="ui message">
+                <p>Don't have access to your authenticator device? You can
+                    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+                </p>
             </div>
-            <div class="checkbox mb-3">
-                <label asp-for="Input.RememberMachine" class="form-label">
-                    <input asp-for="Input.RememberMachine" />
-                    @Html.DisplayNameFor(m => m.Input.RememberMachine)
-                </label>
-            </div>
-            <div>
-                <button type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-<p>
-    Don't have access to your authenticator device? You can
-    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
-</p>
+</body>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
