--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,28 +5,33 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="change-password-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label asp-for="Input.OldPassword" class="form-label"></label>
-                <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
+<div class="ui container">
+    <h3 class="ui header center aligned">@ViewData["Title"]</h3>
+    <partial name="_StatusMessage" for="StatusMessage" />
+
+    <div class="ui segment">
+        <form id="change-password-form" method="post" class="ui form">
+            <div asp-validation-summary="ModelOnly" class="ui message negative" role="alert"></div>
+            
+            <div class="field">
+                <label asp-for="Input.OldPassword">Old Password</label>
+                <input asp-for="Input.OldPassword" type="password" autocomplete="current-password" placeholder="Please enter your old password.">
+                <span asp-validation-for="Input.OldPassword" class="ui pointing red basic label"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label asp-for="Input.NewPassword" class="form-label"></label>
-                <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
+
+            <div class="field">
+                <label asp-for="Input.NewPassword">New Password</label>
+                <input asp-for="Input.NewPassword" type="password" autocomplete="new-password" placeholder="Please enter your new password.">
+                <span asp-validation-for="Input.NewPassword" class="ui pointing red basic label"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password."/>
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+
+            <div class="field">
+                <label asp-for="Input.ConfirmPassword">Confirm New Password</label>
+                <input asp-for="Input.ConfirmPassword" type="password" autocomplete="new-password" placeholder="Please confirm your new password.">
+                <span asp-validation-for="Input.ConfirmPassword" class="ui pointing red basic label"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+
+            <button type="submit" class="ui button primary fluid">Update password</button>
         </form>
     </div>
 </div>
