--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -5,26 +5,27 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+<div class="ui container">
+    <h3 class="ui header center aligned">@ViewData["Title"]</h3>
 
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-    </p>
-</div>
+    <div class="ui warning message">
+        <div class="header">
+            <strong>Warning</strong>
+        </div>
+        <p>Deleting this data will permanently remove your account, and this cannot be recovered.</p>
+    </div>
 
-<div>
-    <form id="delete-user" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+    <form id="delete-user" method="post" class="ui form">
+        <div asp-validation-summary="ModelOnly" class="ui error message" role="alert"></div>
         @if (Model.RequirePassword)
         {
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
-                <label asp-for="Input.Password" class="form-label"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <div class="field">
+                <label asp-for="Input.Password">Password</label>
+                <input asp-for="Input.Password" type="password" autocomplete="current-password" placeholder="Please enter your password.">
+                <span asp-validation-for="Input.Password" class="ui pointing red basic label"></span>
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="ui fluid large red button" type="submit">Delete data and close my account</button>
     </form>
 </div>
 
