--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -5,38 +5,38 @@
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="email-form" method="post">
-            <div asp-validation-summary="All" class="text-danger" role="alert"></div>
-            @if (Model.IsEmailConfirmed)
-            {
-                <div class="form-floating mb-3 input-group">
-                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." disabled />
-                        <div class="input-group-append">
-                            <span class="h-100 input-group-text text-success font-weight-bold">✓</span>
-                        </div>
-                    <label asp-for="Email" class="form-label"></label>
-                </div>
-            }
-            else
-            {
-                <div class="form-floating mb-3">
-                    <input asp-for="Email" class="form-control" placeholder="Please enter your email." disabled />
-                    <label asp-for="Email" class="form-label"></label>
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
-                </div>
-            }
-            <div class="form-floating mb-3">
-                <input asp-for="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Please enter new email." />
-                <label asp-for="Input.NewEmail" class="form-label"></label>
-                <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
+<div class="ui container">
+    <h2 class="ui dividing header">@ViewData["Title"]</h2>
+    <partial name="_StatusMessage" for="StatusMessage" />
+
+    <form class="ui form" id="email-form" method="post">
+        <div asp-validation-summary="All" class="ui message negative"></div>
+
+        @if (Model.IsEmailConfirmed)
+        {
+            <div class="disabled field">
+                <label>Email</label>
+                <input asp-for="Email" type="text" placeholder="Your email is confirmed" disabled>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary">Change email</button>
-        </form>
-    </div>
+            <div class="ui label green"><i class="check icon"></i> Email Confirmed</div>
+        }
+        else
+        {
+            <div class="disabled field">
+                <label>Email</label>
+                <input asp-for="Email" type="text" placeholder="Your email is not confirmed" disabled>
+                <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="ui button blue">Send Verification Email</button>
+            </div>
+        }
+
+        <div class="field">
+            <label>New Email</label>
+            <input asp-for="Input.NewEmail" placeholder="Please enter new email.">
+            <span asp-validation-for="Input.NewEmail" class="ui pointing red basic label"></span>
+        </div>
+        
+        <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="ui button primary fluid">Change Email</button>
+    </form>
 </div>
 
 @section Scripts {
