--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,26 +5,27 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.NewUserName" class="form-control" placeholder="Please choose your username."  />
+<div class="ui container">
+    <h2 class="ui dividing header">@ViewData["Title"]</h2>
+    <partial name="_StatusMessage" for="StatusMessage" />
 
-                <label asp-for="Input.NewUserName" class="form-label"></label>
-                <span asp-validation-for="Input.NewUserName" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save Profile</button>
-        </form>
-    </div>
+    <form class="ui form" id="profile-form" method="post">
+        <div asp-validation-summary="ModelOnly" class="ui message negative"></div>
+
+        <div class="field">
+            <label for="Input.NewUserName">Username</label>
+            <input asp-for="Input.NewUserName" type="text" placeholder="Please choose your username.">
+            <span asp-validation-for="Input.NewUserName" class="ui pointing red basic label"></span>
+        </div>
+
+        <div class="field">
+            <label for="Input.PhoneNumber">Phone Number</label>
+            <input asp-for="Input.PhoneNumber" type="text" placeholder="Please enter your phone number.">
+            <span asp-validation-for="Input.PhoneNumber" class="ui pointing red basic label"></span>
+        </div>
+
+        <button id="update-profile-button" type="submit" class="ui button primary fluid">Save Profile</button>
+    </form>
 </div>
 
 @section Scripts {
