--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,21 +5,20 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
-
-<div class="row">
-    <div class="col-md-6">
+<div class="ui container">
+    <h2 class="ui dividing header">@ViewData["Title"]</h2>
+    <div class="ui message">
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-        </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+        <p><strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong></p>
     </div>
+
+    <form class="ui form" id="download-data" asp-page="DownloadPersonalData" method="post">
+        <button class="ui button primary" type="submit">Download</button>
+    </form>
+
+    <div class="ui hidden divider"></div>
+
+    <a asp-page="DeletePersonalData" class="ui button negative">Delete</a>
 </div>
 
 @section Scripts {
