Fixes front page link to CreateBracket

--- a/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
         <p class="text-styling">Your ultimate platform for organizing and participating in tournaments.</p>
         
         <div class="ui center aligned segment">
-            <button class="ui animated button" tabindex="0">
+            <a href="@Url.Action("CreateBracket", "Bracket")" class="ui animated button" tabindex="0">
                 <div class="visible content">Got an idea for a tournament?</div>
                 <div class="hidden content">Create a Basic Bracket.
                 </div>
-            </button>
+            </a>
             <a href="@Url.Action("Announcement", "Home")" class="ui animated button" tabindex="0">
                 <div class="visible content">What have you missed?</div>
                 <div class="hidden content">Check Announcements Page</div>
