Some modification on front-end design for Profile

--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h3 class="ui header center aligned">@ViewData["Title"]</h3>
     <partial name="_StatusMessage" for="StatusMessage" />
