--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h3 class="ui header center aligned">@ViewData["Title"]</h3>
 
