--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h3 class="ui center aligned header">@ViewData["Title"]</h3>
     <p class="ui text">You can download all the data we currently hold about your account, including personal information, participation in tournaments, and more.</p>
