--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h2 class="ui dividing header">@ViewData["Title"]</h2>
     <partial name="_StatusMessage" for="StatusMessage" />
