--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h2 class="ui dividing header">@ViewData["Title"]</h2>
     <div class="ui message">
