--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -6,6 +6,7 @@
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
+<body class="announcement-background"></body>
 <div class="ui container">
     <h2 class="ui header">@ViewData["Title"]</h2>
     <partial name="_StatusMessage" for="StatusMessage" />
