--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -7,7 +7,7 @@
 
 <body class="announcement-background">
     <div class="ui container center aligned" style="padding-top: 50px; padding-bottom: 50px;">
-        <h1 class="ui header title-styling">@ViewData["Title"]</h1>
+        <h1 class="title-styling">@ViewData["Title"]</h1>
         <h2 class="ui header">Enter your email to reset your password</h2>
         <div class="ui very padded segment">
             <form method="post" class="ui large form">
