--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Login.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <body class="announcement-background">
     <div class="ui container center aligned" style="padding-top: 50px; padding-bottom: 50px;">
-        <h1 class="ui header title-styling">@ViewData["Title"]</h1>
+        <h1 class="title-styling">@ViewData["Title"]</h1>
         <div class="ui very padded segment">
             <form id="account" method="post" class="ui large form">
                 <div class="field">
