--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -7,7 +7,7 @@
 
 <body class="announcement-background">
     <div class="ui container center aligned" style="padding-top: 50px; padding-bottom: 50px;">
-        <h1 class="ui header title-styling">@ViewData["Title"]</h1>
+        <h1 class="title-styling">@ViewData["Title"]</h1>
         <p class="text-styling">Your login is protected with an authenticator app. Enter your authenticator code below.</p>
         <div class="ui very padded segment">
             <form method="post" class="ui large form" asp-route-returnUrl="@Model.ReturnUrl">
