--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -3,6 +3,7 @@
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
 
+<body class="announcement-background"></body>
 <div class="ui vertical menu">
     <a class="@ManageNavPages.IndexNavClass(ViewContext) item" id="profile" asp-page="./Index">Profile</a>
     <a class="@ManageNavPages.EmailNavClass(ViewContext) item" id="email" asp-page="./Email">Email</a>
