--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                 <a class="item" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
                 
                 <div class="right menu">
+                    <a class="item" asp-area="" asp-controller="Home" asp-action="Search">
+                        <i class="search icon"></i>
+                    </a>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
