commiting a semi working section

--- a/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
@@ -5,21 +5,20 @@
 <body class="announcement-background">
     <div class="ui container">
         <h1 class="title-styling">Welcome to @Model.Username's profile page!</h1>
-        <p class="text-styling">Thank you for choosing BitBracket. We hope to provide a great experience.</p>
 
         <div class="ui very padded segment">
             <div class="ui divided items">
                 <div class="item">
                     <div class="image">
-                        <img id="profileImage" src="@Model.ProfilePictureUrl" alt="Profile Picture" class="ui medium rounded image">
+                        <!-- <img id="profileImage" src="@Model.ProfilePictureUrl" alt="Profile Picture" class="ui medium rounded image">-->
                     
                     </div>
                     <div class="content">
                         <a class="header">@Model.Username</a>
-                        <div class="meta">
+                        <!-- <div class="meta">
                             <span>@Model.Email</span>
                             <p><strong>Tag:</strong> <div id="tagId" class="ui label">@Model.Tag</div></p>
-                            <p><strong>Bio:</strong> <div id="bioId" class="ui small fluid input">@Model.Bio</div></p>
+                            <p><strong>Bio:</strong> <div id="bioId" class="ui small fluid input">@Model.Bio</div></p> -->
                         </div>
     
                     </div>
