Adding jest and theme feature

--- a/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
@@ -17,5 +17,5 @@
     </div>
 </body>
 @section Scripts {
-    <script src="~/js/announcementCreateForm.js"></script> 
+    <script src="~/js/announcementCreateForm.js" defer></script>
 }
