--- a/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Profile.cshtml
@@ -1,4 +1,6 @@
-﻿@using BitBracket.ViewModels
+﻿@* Home/Profile *@
+
+@using BitBracket.ViewModels
 @model UserViewModel
 <!DOCTYPE html>
 <html lang="en">
