--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -31,17 +31,24 @@
     <header>
         <div class="ui menu borderless navbar-background">
             <div class="ui container">
-                <a class="header item" asp-area="" asp-controller="Home" asp-action="Index">BitBracket</a>
-                <a class="item" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                <a class="item" asp-area="" asp-controller="Home" asp-action="Announcement">Announcements</a>
-                <a class="item" asp-area="" asp-controller="Bracket" asp-action="CreateBracket">Create Bracket</a>
+                <a class="header item navbar-text" asp-area="" asp-controller="Home" asp-action="Index">BitBracket</a>
+                <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Announcement">Announcements</a>
+                <a class="item navbar-text" asp-area="" asp-controller="Bracket" asp-action="CreateBracket">Create Bracket</a>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <a class="item" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
+                    <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
                 }
-                <a class="item" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
+                <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
                 
                 <div class="right menu">
+                    <div class="ui dropdown item navbar-text">
+                        Theme <i class="dropdown icon navbar-text"></i>
+                        <div class="menu">
+                            <div class="item" id="light-theme">Light Theme</div>
+                            <div class="item" id="dark-theme">Dark Theme</div>
+                        </div>
+                    </div>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -62,6 +69,10 @@
     <!-- Semantic UI JS -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/themeSwitcher.js" asp-append-version="true"></script>
+    <script>
+        $('.ui.dropdown').dropdown(); // Initialize Semantic UI dropdown
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
