--- a/main/BitBracket/src/BitBracket/Views/Shared/_LoginPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_LoginPartial.cshtml
@@ -5,16 +5,16 @@
 <div class="ui secondary menu navbar-background">
     @if (SignInManager.IsSignedIn(User))
     {
-        <a class="item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            <i class="user circle icon"></i>Hello @User.Identity?.Name!
+        <a class="item navbar-text" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <i class="user circle icon navbar-text"></i>Hello @User.Identity?.Name!
         </a>
-        <form class="item" asp-area="Identity" asp-page="/Account/Logout" method="post" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button type="submit" class="ui button basic">Logout</button>
+        <form class="item navbar-text" asp-area="Identity" asp-page="/Account/Logout" method="post" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button type="submit navbar-text" class="ui button basic">Logout</button>
         </form>
     }
     else
     {
-        <a class="item" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        <a class="item" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="item navbar-text" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="item navbar-text" asp-area="Identity" asp-page="/Account/Login">Login</a>
     }
 </div>
