--- a/main/BitBracket/src/BitBracket/Views/Shared/_SpeechToTextPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_SpeechToTextPartial.cshtml
@@ -1,13 +1,12 @@
 @model BitBracket.ViewModels.SpeechToTextViewModel
 
-<div id="speechToTextInput">
-    <label for="languageSelector">Select Language:</label>
-    <select id="languageSelector" class="ui dropdown">
-        @foreach (var language in Model.SupportedLanguages)
-        {
-            <option value="@language.Code">@language.Name</option>
-        }
-    </select>
-    <button id="startRecording" class="ui button">Start Recording</button>
-    <button id="stopRecording" class="ui button" disabled>Stop Recording</button>
+<div>
+    <select id="languageSelect" asp-for="SelectedLanguage" asp-items="Model.Languages"></select>
+    <button id="startRecord">Record Audio</button>
+    <button id="stopRecord" disabled>Stop Recording</button>
+    <input type="text" id="transcriptionResult" placeholder="Speak something...">
 </div>
+
+@section Scripts {
+    <script src="~/js/speechToText.js"></script>
+}
