commiting feature that only shows confirmed email users when searching

--- a/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/main/BitBracket/src/BitBracket/Areas/Identity/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Configure authenticator app";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
-
+<body class="announcement-background">
 <partial name="_StatusMessage" for="StatusMessage" />
 <h3>@ViewData["Title"]</h3>
 <div>
@@ -22,7 +22,6 @@
         </li>
         <li>
             <p>Scan the QR Code or enter this key <kbd>@Model.SharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-            <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
             <div id="qrCode"></div>
             <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
         </li>
@@ -47,7 +46,7 @@
         </li>
     </ol>
 </div>
-
+</body>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <script type="text/javascript" src="~/lib/qrcode.js"></script>
