Tournament Container for User Bracket Feature
Created a Tournament Dashboard, Tournament information form that saves to db, clickable containers for tournaments, tournament page, etc.

--- a/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
+                    <a class="item navbar-text" asp-area="" asp-controller="Bracket" asp-action="TournamentDashboard">Tournament Dashboard</a>
                 }
                 <a class="item navbar-text" asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
                 
