Minor adjustments for Jest tests and adding tests

--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <input type="submit" class="btn btn-primary" data-dismiss="modal" value="Create Tournament">
+                        <input type="submit" class="btn btn-primary" value="Create Tournament">
                     </div>
                 </form>
             </div>
