Adding partial work for announcement feature

--- a/main/BitBracket/src/BitBracket/Views/Announcements/_AnnouncementsPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_AnnouncementsPartial.cshtml
@@ -1,3 +1,5 @@
+@* Views/Announcements/_AnnouncementsPartial.cshtml *@
+
 <div id="announcementsList" class="ui stackable cards">
     <!-- Dynamic content will be injected here -->
 </div>
