--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -1,3 +1,5 @@
+@* Views/Home/Announcement.cshtml *@
+
 @{
     ViewData["Title"] = "Announcements and Notifications";
 }
@@ -9,7 +11,7 @@
 
             <div class="section-gap"></div>
 
-            <a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create a New Announcement</a>
+            <a href="@Url.Action("AnnouncementCreate", "Home")" class="ui button primary">Create an admin Announcement</a>
 
             <div class="section-gap"></div>
 
