--- a/main/BitBracket/src/BitBracket/Views/Announcements/_CreateAnnouncementPartial.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Announcements/_CreateAnnouncementPartial.cshtml
@@ -1,3 +1,5 @@
+@* Views/CreateAnnouncementPartial.cshtml *@
+
 <form id="createAnnouncementForm" class="ui form" style="padding: 20px; background-color: #93a86d; border-radius: 10px;">
     <div class="ui field">
         <label>Title</label>
